<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/startLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/activationButton"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/active_button" />

        <Button
            android:id="@+id/takePicButton"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/take_pic_button" />

        <Button
            android:id="@+id/automaticRecogButton"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/automatic_recog_button" />

        <Button
            android:id="@+id/selectPicButton"
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/select_pic_button" />


        <Button
            android:id="@+id/rx_plate_recognition"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="rx识别" />

        <ImageView
            android:id="@+id/plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/endRelativieLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffffff">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plateColor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/confirm" />

        <ImageView
            android:id="@+id/plateImage"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#0091A1">

            <ImageView
                android:id="@+id/plate_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/back_btn_result"

                />

            <TextView
                android:id="@+id/plate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/plateid_result"

                />
        </RelativeLayout>

        <TextView
            android:id="@+id/plateId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plateImage"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:text="TextView"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textNumber"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/plate_color" />

        <TextView
            android:id="@+id/plateColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plateId"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:text="TextView"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plateImage"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/plate_id" />


    </RelativeLayout>

</RelativeLayout>